--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ reportlab==3.6.8
 PyPDF2==2.10.5
 SQLite3==2.6.0
 python-dotenv==0.19.0" > requirements.txt
+echo "python-dotenv==1.0.0" >> requirements.txt
