--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 Flask>=2.1
 gunicorn==20.1.0
+qrcode==7.3
+reportlab==3.6.8
+PyPDF2==2.10.5
+SQLite3==2.6.0
+python-dotenv==0.19.0" > requirements.txt
+python-dotenv==1.0.0" >> requirements.txt
